# Adi

./: README.md
Adi/: AppDelegate.h  AppDelegate.m  FirstViewController.h  FirstViewController.m  FourthViewController.h  FourthViewController.m  Info.plist  SecondViewController.h  SecondViewController.m  ThirdViewController.h  ThirdViewController.m  main.m
Adi.xcodeproj/: project.pbxproj
Adi/Base.lproj/: LaunchScreen.xib  Main.storyboard
AdiTests/: AdiTests.m  Info.plist
adiweb/: index.html
cpp/: Busy.cpp  Makefile  Makefile.txt  end_program_handler.cpp  end_program_handler.h  led_back_thread.cpp  led_back_thread.h  led_front_thread.cpp  led_front_thread.h  led_left_thread.cpp  led_left_thread.h  led_right_thread.cpp  led_right_thread.h  robot_control.cpp  robot_thread_control.cpp  robot_thread_control.h  shared_constants.h  sonar_back.c  sonar_back_thread.cpp  sonar_back_thread.h  sonar_front.c  sonar_front_thread.cpp  sonar_front_thread.h  sonar_left.c  sonar_left_thread.cpp  sonar_left_thread.h  sonar_my.c  sonar_right.c  sonar_right_thread.cpp  sonar_right_thread.h  timing_measurement.cpp  timing_measurement.h
pano/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  convertall.sh  hello.sh  source.cpp  source_back.cpp  stitching  stitching_.cpp  takepano.sh  testrobo_right.py
pyscripts/: arrow_detect.py  btclient.py  btcontroller.py  btcontroller_3.py  btcron.sh  controller.pl  controller.py  finger_detect.py  hand_gesture.py  robotcontrol.py  testrobo_forward.py  testrobo_left.py  testrobo_rev_vid.py  testrobo_reverse.py  testrobo_right.py
(+17 files in other folders)
